--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>红岩网校 | 门户网站 | 重邮最大最全的资源门户 | 重庆邮电大学</title>
+    <link rel="stylesheet" href="public/css/global.css"/>
+
 </head>
 <body>
 
