init sturct of index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <title>红岩网校 | 门户网站 | 重邮最大最全的资源门户 | 重庆邮电大学</title>
     <link rel="stylesheet" href="public/css/global.css"/>
-
 </head>
 <body>
-
+    <nav>
+        <div class="nav-btn">设为首页</div>
+        <div class="nav-btn">二手市场</div>
+        <div class="nav-btn">软件中心</div>
+        <div class="nav-btn">BTdown 铺</div>
+        <div class="nav-btn">红岩微博</div>
+        <div class="nav-btn more">…</div>
+        <div class="nav-lg">登陆</div>
+    </nav>
+    <main>
+        <header></header>
+        <!-- 聚焦模块 start -->
+        <section class="m-addr"></section>
+        <!-- 聚焦模块 end -->
+        <!-- 热门模块 start -->
+        <section class="m-hot"></section>
+        <!-- 热门模块 end -->
+        <!-- 助学模块 start -->
+        <section class="m-school"></section>
+        <!-- 助学模块 end -->
+        <!-- 发现模块 start -->
+        <section class="m-dscy"></section>
+        <!-- 发现模块 end -->
+        <!-- 助学模块 start -->
+        <section class="m-stydy"></section>
+        <!-- 助学模块 end -->
+    </main>
+    <footer>
+        <div class="ft-logolist">
+            <span class="ft-logo-des"></span>
+            <div class="ft-sina"></div>
+            <div class="ft-qzone"></div>
+            <div class="ft-wechat"></div>
+        </div>
+        <div class="ft-links">
+            <a href="##">关于我们</a>
+            <a href="##">网站地图</a>
+            <a href="##">指出错误</a>
+            <a href="##">管理入口</a>
+        </div>
+        <div class="ft-des">地址：重庆市南岸区崇文路2号(重庆邮电大学内) 400065</div>
+        <div class="ft-des">E-mail: redrock@cqupt.edu.cn (023-62461084)</div>
+    </footer>
 </body>
 </html>
