--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
             <form action="" method="post" class="login-form">
                 <input type="text" class="user-id f-db f-fs2" placeholder="昵称、学号、教师编号、E-mail地址"/>
                 <input type="password"  class="user-pwd f-db f-fs2" placeholder="请输入通行证密码(6-16位)"/>
-                <input type="submit" class="confirm f-db f-fs2"/>
+                <input type="submit" value="登陆" class="confirm f-db f-fs2"/>
             </form>
             <a href="##" class="problem f-fs1">登录遇到问题?</a>
         </div>
@@ -932,5 +932,6 @@
 <script type="text/javascript" src="public/js/lib/jquery.sliderBox.js"></script>
 <script type="text/javascript" src="public/js/plugin.set.js"></script>
 <script type="text/javascript" src="public/js/script.js"></script>
+<script src="public/js/ling.js"></script>
 
 </html>
