--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <!-- 教务信息模块 end -->
 
                     <ul class="slider-tabs f-oh f-fl">
-                        <li class="tab-hot z-active"><div class="g-icon-wrap"><span>热点焦距</span></div></li>
+                        <li class="tab-hot"><div class="g-icon-wrap"><span>热点焦距</span></div></li>
                         <li class="tab-cqupt-news"><div class="g-icon-wrap"><span>重邮动态</span></div></li>
                         <li class="tab-teach-news"><div class="g-icon-wrap"><span>教务信息</span></div></li>
                         <li class="z-cover"></li>
@@ -437,7 +437,7 @@
                     <!--微电影模块 end-->
 
                     <ul class="slider-tabs f-oh f-fl">
-                        <li class="tab-album z-active"><div class="g-icon-wrap"><span>微相册</span></div></li>
+                        <li class="tab-album"><div class="g-icon-wrap"><span>微相册</span></div></li>
                         <li class="tab-novel"><div class="g-icon-wrap"><span>微电影</span></div></li>
                         <li class="tab-film"><div class="g-icon-wrap"><span>微小说</span></div></li>
                         <li class="z-cover"></li>
@@ -638,7 +638,7 @@
                     <!--热点滚动模块 end-->
 
                     <ul class="slider-tabs f-oh">
-                        <li class="tab-products z-active"><div class="g-icon-wrap"><span>电子产品</span></div></li>
+                        <li class="tab-products"><div class="g-icon-wrap"><span>电子产品</span></div></li>
                         <li class="tab-daily"><div class="g-icon-wrap"><span>生活用品</span></div></li>
                         <li class="tab-learn"><div class="g-icon-wrap"><span>学习资料</span></div></li>
                         <li class="z-cover"></li>
